complete create checkpoint API
